# GTANite

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: debug_build.yml
cmake/conan/: android_cross_compiling.cmake
src/: main.cpp
src/utils/: gtasa.h  hook_helper.h
